2005-05-10 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Now correctly parses KDH's web pages and retrieves
          a list of targets, then queues thes up with the user_agent using the
          new_observation() method.
        
2005-05-09 Aladair Allan <aa@astro.ex.ac.uk>

        * eSTAR/UA/Algorithim/ExoPlanetMonitor.pm: Added, simple copy of
          the SingleExposure algorithim block for now. Need to look into the
          way we generate Automatic followup IDs and how we associate eSTAR
          unique IDs and the OGLE ID. Also need a garbage collection thread
          for the user agent (in a similar fashion to the incomplete one in
          the jach_agent).
          
        * bin/ogle_fetch.pl: Basic script to grab and parse KDH's observing
          priorities web pages.  

2005-05-06 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Fixed buffer overflow error in the TCP/IP server
          of the node agent.
          
        * eSTAR/UA/Handler.pm: Fixed time constraint on teh construction of
          and submission of score and observation request messages  

2005-05-05 Aladair Allan <aa@astro.ex.ac.uk>

        * Working node agent for LT & FTN. Integrated changes to eSTAR::RTML
          to support new RTML tags into the user agent and associated handlers.
          
        * bin/node_agen.pl: Moved to threaded SOAP server from forking version.
        

2005-05-03 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Fixed bugs
        
        * eSTAR/NA/Handler.pm: Fixed bugs and added mapping for user and
          project ID (at least at a very basic hardwired level). This is
          a horrible kludge and needs to be fixed at some point.

2005-04-29 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Added node_agent and supporting modules in
          eSTAR::NA::*. This is a port of the old 2nd generation code base